# yongmusic

./: .gitattributes  .gitignore  README.md  build.gradle  config.gradle  settings.gradle
RecordAudioSDK/: CMakeLists.txt  build.gradle
RecordAudioSDK/src/androidTest/java/com/hardrubic/sdk/recordaudio/: ExampleInstrumentedTest.java
RecordAudioSDK/src/main/: AndroidManifest.xml
RecordAudioSDK/src/main/java/com/hardrubic/sdk/recordaudio/: RecordAudioListener.java  RecordAudioManager.java
RecordAudioSDK/src/main/jni/: com_hardrubic_sdk_recordaudio_record_LameUtil.h  lame_util.c
RecordAudioSDK/src/main/res/layout/: layout_record_audio.xml
RecordAudioSDK/src/main/res/values/: attr.xml  strings.xml
RecordAudioSDK/src/test/java/com/hardrubic/sdk/recordaudio/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/build-types/debug/res/values/: strings.xml
app/build-types/release/res/values/: strings.xml
app/src/androidTest/java/com/hardrubic/music/yongmusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/hardrubic/music/: MusicManager.aidl
app/src/main/aidl/com/hardrubic/music/aidl/: MusicAidl.aidl  MusicAidl.java  MusicManager.aidl
app/src/main/assets/: netease_encrypt.js
app/src/main/cpp/: rsa_encrypt.cpp
app/src/main/java/com/hardrubic/music/: Constant.kt
app/src/main/java/com/hardrubic/music/application/: AppApplication.kt
app/src/main/java/com/hardrubic/music/biz/: AppVersionUpdate.kt  (+2 more)
app/src/main/res/layout/: activity_album_detail.xml  activity_artist_detail.xml  activity_collection_detail.xml  activity_local_music.xml  activity_login.xml  activity_main.xml  activity_playing.xml  activity_recent.xml  activity_record_audio.xml  activity_search.xml  activity_select_collection.xml  activity_welcome.xml  content_main.xml  fragment_artist_desc.xml  fragment_discover.xml  fragment_main_list.xml  fragment_music_control.xml  fragment_play_list.xml  fragment_playing_musc_more.xml  fragment_search_result_list.xml  item_album.xml  item_artist.xml  item_collection.xml  item_music.xml  item_play_list.xml  layout_album_detail_cover.xml  layout_empty_list_hint.xml  layout_music_list_head.xml  layout_music_notification.xml  layout_overlay_window.xml  layout_progress_dialog.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_collection_detail_action.xml  menu_search_action.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
(+205 files in other folders)
